--- a/dockers/foundry/docker-compose.yml
+++ b/dockers/foundry/docker-compose.yml
@@ -1,22 +1,17 @@
 version: "3.8"
-secrets:
-    config_json:
-      file: secrets.json
-
 services:
   foundry:
     image: felddy/foundryvtt:release
     hostname: foundryvtt
+    volumes:
+        -  /home/arastorn/Foundry/foundrydata:/data
     init: true
     restart: "unless-stopped"
-    volumes:
-      - type: bind
-        source: /home/arastorn/Foundry/foundrydata
-        target: /data
+    environment:
+        - PUID=1000
+        - PGID=1000
+        - TZ=Europe/Paris
     ports:
-      - target: 30000
-        published: 30000
-        protocol: tcp
+      - 30000:30000
     secrets:
-        - source: config_json
-          target: config.json
+        - ./secrets.json:config.json
