add rutorrent back

--- a/dockers/multimedias/docker-compose.yml
+++ b/dockers/multimedias/docker-compose.yml
@@ -102,3 +102,21 @@ services:
             - PGID=1000
             - TZ=Europe/Paris
             - TRANSMISSION_WEB_HOME=/combustion-release/
+    # Téléchargement des torrents 
+    rutorrent:
+        image: "linuxserver/rutorrent"
+        hostname: rutorrent
+        container_name: "rutorrent"
+        volumes:
+            - /home/docker/rutorrent/config:/config
+            - /home/arastorn/Download/torrent:/downloads
+        ports:
+            - 9281:80
+            - 5253:5000
+            - 51413:51413
+            - 6881:6881/udp
+        restart: unless-stopped
+        environment:
+        - PUID=1000
+        - PGID=1000
+        - TZ=Europe/Paris
