--- a/dockers/management/docker-compose.yml
+++ b/dockers/management/docker-compose.yml
@@ -15,3 +15,18 @@ services:
             - PUID=1000
             - PGID=1000
             - TZ=Europe/Paris
+
+    nginx-proxy-manager:
+        image: 'jc21/nginx-proxy-manager:latest'
+        restart: unless-stopped
+        ports:
+            - '80:80'
+            - '81:81'
+            - '443:443'
+        volumes:
+            - /home/docker/nginx-proxy-manager/data:/data
+            - /home/docker/nginx-proxy-manager/letsencrypt:/etc/letsencrypt
+        environment:
+            - PUID=1000
+            - PGID=1000
+            - TZ=Europe/Paris
