--- a/dockers/management/docker-compose.yml
+++ b/dockers/management/docker-compose.yml
@@ -15,6 +15,8 @@ services:
             - PUID=1000
             - PGID=1000
             - TZ=Europe/Paris
+        networks:
+            - default
 
     nginx-proxy-manager:
         image: 'jc21/nginx-proxy-manager:latest'
@@ -31,7 +33,21 @@ services:
             - PGID=1000
             - TZ=Europe/Paris
         networks:
-            - bitwarden_default
-            - management_default
-            - multimedias_default
-            - foundry_default
+            - bitwarden
+            - default
+            - multimedias
+            - foundry
+
+
+networks:
+    default:
+        name: management
+    bitwarden:
+        name: bitwarden_default
+        external: true
+    multimedias:
+        name: multimedias_default
+        external: true
+    foundry:
+        name: foundry_default
+        external: true
