--- a/dockers/multimedias/docker-compose.yml
+++ b/dockers/multimedias/docker-compose.yml
@@ -11,8 +11,8 @@ services:
             - /home/arastorn/Jellyfin/Animes:/animes
             - /home/arastorn/Jellyfin/Series:/series
             - /home/arastorn/Jellyfin/Films:/movies
-        ports:
-            - 8096:8096
+        #ports:
+        #    - 8096:8096
         restart: unless-stopped 
         environment:
             - PUID=1001
@@ -27,8 +27,8 @@ services:
             - /home/arastorn/Download/torrent:/downloads
             - /home/arastorn/Jellyfin/Animes:/animes
             - /home/arastorn/Jellyfin/Series:/series
-        ports:
-            - 8989:8989
+        #ports:
+        #    - 8989:8989
         restart: unless-stopped
         environment:
         - PUID=1001
@@ -43,8 +43,8 @@ services:
             - /home/docker/radarr/config:/config
             - /home/arastorn/Download/torrent:/downloads
             - /home/arastorn/Jellyfin/Films:/movies
-        ports:
-            - 7878:7878
+        #ports:
+        #    - 7878:7878
         restart: unless-stopped
         environment:
         - PUID=1001
@@ -58,8 +58,8 @@ services:
         volumes:
             - /home/docker/jackett/config:/config
             - /home/arastorn/Download/torrent:/downloads
-        ports:
-            - 9117:9117
+        #ports:
+        #    - 9117:9117
         restart: unless-stopped
         environment:
         - PUID=1001
@@ -72,8 +72,8 @@ services:
         container_name: "flaresolverr"
         volumes:
             - /home/docker/flaresolverr/config:/config
-        ports:
-            - 8191:8191
+        #ports:
+        #    - 8191:8191
         restart: unless-stopped
         environment:
         - CAPTCHA_SOLVER=hcaptcha-solver
@@ -81,24 +81,6 @@ services:
         - PGID=1001
         - TZ=Europe/Paris
         - LOG_LEVEL=info
-    # Téléchargement des torrents 
-    transmission:
-        image: ghcr.io/linuxserver/transmission
-        container_name: transmission
-        volumes:
-            - /home/docker/transmission/config:/config
-            - /home/arastorn/Download/torrent:/downloads
-            - /home/arastorn/Download/torrent/watched:/watch
-        ports:
-            - 9091:9091
-            - 51413:51413
-            - 51413:51413/udp
-        restart: unless-stopped
-        environment:
-            - PUID=1001
-            - PGID=1001
-            - TZ=Europe/Paris
-            - TRANSMISSION_WEB_HOME=/combustion-release/
     # Téléchargement des torrents 
     rutorrent:
         image: "crazymax/rtorrent-rutorrent:latest"
@@ -108,8 +90,8 @@ services:
             - /home/docker/rutorrent/data:/data
             - /home/arastorn/Download/torrent:/downloads
         ports:
-            - 9281:8080
-            - 8000:8000
+            #- 9281:8080
+            #- 8000:8000
             - 9000
             - 50000
             - 6881:6881/udp
