--- a/dockers/foundry/docker-compose.yml
+++ b/dockers/foundry/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         - PUID=1000
         - PGID=1000
         - TZ=Europe/Paris
-    ports:
-        - 127.0.0.1:30000:30000
+    # ports:
+    #    - 127.0.0.1:30000:30000
         
     
