--- a/dockers/management/docker-compose.yml
+++ b/dockers/management/docker-compose.yml
@@ -23,7 +23,7 @@ services:
         restart: unless-stopped
         ports:
             - '80:80'
-            - '81:81'
+            # - '81:81'
             - '443:443'
         volumes:
             - /home/docker/nginx-proxy-manager/data:/data
@@ -38,6 +38,15 @@ services:
             - multimedias
             - foundry
 
+    cloudflared:
+        image: cloudflare/cloudflared:latest
+        container_name: cloudflared
+        restart: unless-stopped
+        networks:
+            - management
+        command: tunnel --config /home/nonroot/.cloudflared/config.yml run eyJhIjoiNDQ4YWVjMjQzMjYzNTVhMDI1ZTgxZGI4NTc4NjAyYmQiLCJ0IjoiMDQ2Zjk5NzYtZTc2Yy00NDcwLWFiYmMtMTVkN2E0MTg0OTYzIiwicyI6IlpEZ3pNekpoWVdRdE5qZGxOeTAwWkdFeUxXRTBabVV0TWpRME4yTXdNRFkyTnpVNSJ9 #Replace UUID with your actual UUID
+        volumes:
+            - /home/docker/cloudflared/data:/home/nonroot/.cloudflared/
 
 networks:
     default:
