--- a/dockers/management/docker-compose.yml
+++ b/dockers/management/docker-compose.yml
@@ -43,7 +43,7 @@ services:
         container_name: cloudflared
         restart: unless-stopped
         networks:
-            - management
+            - default
         command: tunnel --config /home/nonroot/.cloudflared/config.yml run eyJhIjoiNDQ4YWVjMjQzMjYzNTVhMDI1ZTgxZGI4NTc4NjAyYmQiLCJ0IjoiMDQ2Zjk5NzYtZTc2Yy00NDcwLWFiYmMtMTVkN2E0MTg0OTYzIiwicyI6IlpEZ3pNekpoWVdRdE5qZGxOeTAwWkdFeUxXRTBabVV0TWpRME4yTXdNRFkyTnpVNSJ9 #Replace UUID with your actual UUID
         volumes:
             - /home/docker/cloudflared/data:/home/nonroot/.cloudflared/
